--- a/Chatroom/Client/Pages/User.razor
+++ b/Chatroom/Client/Pages/User.razor
@@ -1,25 +1,22 @@
 ﻿@page "/User/{username}"
 
-<div class="playground">
-
-</div>
-
 <div class="chatarea">
     <div class="message-list-box">
-        <div class="message-list">
+        <ul class="message-list">
             @foreach (var message in history)
             {
-                <div class="message">
+                <li class="message">
                     <span class="message-user" style="@($"color:{message.User.Color}")">@message.User.Username</span>
                     <span class="message-time">@message.Time</span>
                     <br />
                     <p class="message-content">@message.Content</p>
-                </div>
+                </li>
             }
-        </div>
+        </ul>
     </div>
     <div class="send-message">
-        <textarea   @bind-value="messageInput"
+        <textarea   placeholder="Ctrl+Enter to send"
+                    @bind-value="messageInput"
                     @bind-value:event="oninput"
                     @onkeydown="@(async e =>
                     {
@@ -29,4 +26,18 @@
         />
         <button @onclick="Send" disabled="@(!IsConnected)">Send</button>
     </div>
+</div>
+
+<div class="userlist-box">
+    <ul class="user-list">
+        <li class="userlist-title">
+            ONLINE - @allusers.Count
+        </li>
+        @foreach (var user in allusers.OrderBy(e => e.Username))
+        {
+            <li class="user-list-item" style="@($"color:{user.Color}")">
+                @user.Username
+            </li>
+        }
+    </ul>
 </div>
