--- a/Chatroom/Client/Pages/_Imports.razor
+++ b/Chatroom/Client/Pages/_Imports.razor
@@ -5,4 +5,5 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using Chatroom.Pages
+@using Chatroom.Client.Shared
 @namespace Chatroom.Pages
