--- a/Chatroom/Client/wwwroot/css/app.css
+++ b/Chatroom/Client/wwwroot/css/app.css
@@ -18,13 +18,20 @@ html {
     background-color: rgb(58, 58, 58);
 }
 
+app {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+}
+
 a {
     color: rgb(223, 246, 255);
 }
 
 button {
     color: black;
-    background-color: rgb(202, 171, 69);
+    background-color: rgb(204, 135, 56);
     border: none;
     font-size: 1rem;
 }
@@ -39,6 +46,10 @@ textarea, input {
     border: none;
     background-color: rgba(255, 255, 255, 0.205);
     font-size: 1rem;
+}
+
+.clickable {
+    cursor: pointer !important;
 }
 
 /* End Common */
@@ -70,12 +81,23 @@ textarea, input {
     height: 1.5rem;
     width: 20rem;
     padding: .2rem;
-    margin: 1rem;
+    margin: 4rem 1rem .5rem 1rem;
 }
 
 .login button {
     height: 2rem;
     width: 10rem;
+    margin: .5rem 1rem;
+}
+
+.login .error-msg {
+    color: rgb(240, 89, 89);
+}
+
+.login .i-agree {
+    margin: 1.5rem 1rem .5rem 1rem;
+    max-width: 30rem;
+    text-align: center;
 }
 
 /* End Index.razor */
@@ -84,6 +106,25 @@ textarea, input {
 
 .chatarea {
     width: 80vw;
+    position: relative;
+}
+
+.chatarea .fly-notice-box {
+    z-index: 100;
+    position: absolute;
+    left: 50%;
+    width: 40%;
+    transform: translate(-50%, 0);
+    text-align: center;
+}
+
+.chatarea .fly-notice {
+    display: block;
+    padding: .6rem;
+    margin-bottom: .2rem;
+    background-color: rgb(204, 135, 56, .6);
+    backdrop-filter: blur(3px); /*firefox: ???*/
+    cursor: default;
 }
 
 .chatarea .message-list-box {
@@ -130,6 +171,17 @@ textarea, input {
 .chatarea .message-time {
     font-size: .7rem;
     color: rgb(151, 151, 151);
+}
+
+.chatarea .message-time:nth-child(3) {
+    display: none;
+}
+
+.chatarea .message:hover .message-time:nth-child(2) {
+    display: none;
+}
+.chatarea .message:hover .message-time:nth-child(3) {
+    display: unset;
 }
 
 .chatarea .message-content {
@@ -198,3 +250,90 @@ textarea, input {
 }
 
 /* end User.razor */
+
+/* begin mobile */
+
+@media (max-width: 950px) {
+    .chatarea .fly-notice-box {
+        min-width: 60%;
+    }
+}
+
+@media (max-width: 750px) {
+    .content {
+        flex-direction: column;
+    }
+
+    .mobile-top-bar {
+        display: flex;
+        align-items: center;
+        height: 6vh;
+        width: 100vw;
+        background-color: rgb(49, 49, 49);
+        box-shadow: inset 1px -7px 3px -6px rgb(37, 37, 37);
+    }
+
+    .mobile-top-bar h1 {
+        margin: .5rem 0 .5rem 2rem;
+        font-size: 1.2rem;
+    }
+
+    .mobile-top-bar .show-users {
+        flex: 1;
+        display: flex;
+        align-items: center;
+        flex-direction: row-reverse;
+        margin-left: 10rem;
+        height: 100%;
+    }
+    .mobile-top-bar .show-users:hover {
+        background-color: rgb(46, 46, 46);
+    }
+    .mobile-top-bar .show-users:active {
+        background-color: rgb(37, 37, 37);
+    }
+
+    .mobile-top-bar .show-users div {
+        width: .7rem;
+        height: .7rem;
+        border-radius: 50%;
+        margin-right: 1rem;
+    }
+
+    .chatarea {
+        min-width: 95vw;
+    }
+
+    .chatarea .message-list {
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+    .chatarea .message-list-box {
+        height: 79vh;
+    }
+
+    .chatarea .send-message textarea {
+        width: 70%;
+    }
+
+    .chatarea .send-message button {
+        width: 30%;
+    }
+
+    .chatarea .fly-notice-box {
+        min-width: 90%;
+    }
+
+    .userlist-box {
+        min-width: 50vw;
+        height: 80vh;
+        margin-top: 2.5rem;
+        margin-bottom: 7rem;
+        position: absolute;
+        left: 100%;
+        transform: translate(-100%, 0);
+    }
+}
+
+/* end mobile */
